--- a/style.css
+++ b/style.css
@@ -21,10 +21,17 @@ h2 {
 }
 
 .page-wrapper {
+  margin: 0 auto;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
+  overflow: hidden;
+}
+
+.spacer-sm {
+  width: 100%;
+  height: 40px;
 }
 
 .header-container {
@@ -161,9 +168,10 @@ h2 {
 }
 
 .banner .image {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   position: absolute;
+  left: calc(50% - 50vw);
   z-index: -1;
 }
 
@@ -184,28 +192,135 @@ h2 {
           flex-flow: column nowrap;
 }
 
-.cards-container {
-  width: 100%;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+.row-wrapper.cards {
+  max-width: none;
 }
 
-.cards-container .card {
-  width: 100%;
-  margin: 30px 0;
+.cards-wrapper {
+  max-width: 1180px;
+  margin: 0 auto;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column;
           flex-flow: column;
+}
+
+.cards-wrapper .slider-control {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  position: relative;
+}
+
+.cards-wrapper .slider-control .slider-dots {
+  width: 100%;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+}
+
+.cards-wrapper .slider-control .slider-dots .dot {
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
   border-radius: 5px;
-  -webkit-box-shadow: 0 4px 15px rgba(43, 126, 179, 0.2);
-          box-shadow: 0 4px 15px rgba(43, 126, 179, 0.2);
-  overflow: hidden;
+  background: #d8d8d8;
+  cursor: pointer;
+}
+
+.cards-wrapper .slider-control .slider-dots .dot.active {
+  background: #1d1f48;
+}
+
+.cards-wrapper .slider-control .slider-arrows {
+  pointer-events: none;
+}
+
+.cards-wrapper .slider-control .slider-arrows .slider-arrow {
+  width: 50px;
+  height: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #1d1f48;
+  cursor: pointer;
+  pointer-events: all;
+  z-index: 1;
+}
+
+.cards-wrapper .slider-control .slider-arrows .slider-arrow.slider-arrow-left {
+  margin-right: 15px;
+}
+
+.cards-wrapper .slider-control .slider-arrows .slider-arrow.slider-arrow-left .icon-arrow {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.cards-wrapper .slider-control .slider-arrows .slider-arrow.inactive {
+  opacity: 0.8;
+  pointer-events: none;
+}
+
+.cards-wrapper .slider-control .slider-arrows .icon-arrow {
+  width: 20px;
+  height: 20px;
+}
+
+.cards-container {
+  width: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.cards-container .card {
+  min-width: calc((100% - 30px) / 3);
+  margin-right: 15px;
+  margin-bottom: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  position: relative;
+}
+
+.cards-container .card:hover {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.cards-container .card:hover :before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #d4d6df;
+  -webkit-transform: translate(6px, 6px);
+          transform: translate(6px, 6px);
+  z-index: -1;
 }
 
 @media only screen and (min-width: 992px) {
