--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,9 @@ $bp-md: "only screen and (min-width: 992px)";
 $black: #000000;
 $white: #ffffff;
 $cardColor: #eef1f6;
+$cardColorBefore: #d4d6df;
+$sliderColor: #1d1f48;
+$dotColor: #d8d8d8;
 $green: #0d8537;
 $headerSize: 70px;
 $padding: 30px;
@@ -12,6 +15,8 @@ $h1FontSizeMobile: 48px;
 $maxWidth: 1180px;
 $borderRadius: 5px;
 $boxShadow: 0 4px 15px rgba(43, 126, 179, 0.2);
+$spacerSm: 40px;
+$spacerMd: 80px;
 
 * {
     box-sizing: border-box;
@@ -33,8 +38,21 @@ h2 {
 }
 
 .page-wrapper {
+    margin: 0 auto;
     flex-flow: column nowrap;
+    overflow: hidden;
 }
+
+
+// ---------------- Spacer ------------------
+
+.spacer-sm {
+    width: 100%;
+    height: $spacerSm;
+}
+
+
+//------------------- Header -----------------
 
 .header-container {
     width: 100%;
@@ -89,6 +107,9 @@ h2 {
     }
 }
 
+
+//-------------------- Banner -----------
+
 .banner {
     width: 100%;
 
@@ -141,9 +162,10 @@ h2 {
     }
 
     .image {
-        width: 100%;
+        width: 100vw;
         height: 100%;
         position: absolute;
+        left: calc(50% - 50vw);
         z-index: -1;
 
         img {
@@ -159,20 +181,109 @@ h2 {
     padding: 0 $padding / 2;
     margin: 0 auto;
     flex-flow: column nowrap;
+
+    &.cards {
+        max-width: none;
+    }
+}
+
+
+// ------------------ Cards -----------------
+
+.cards-wrapper {
+    max-width: $maxWidth;
+    margin: 0 auto;
+    flex-flow: column;
+
+    .slider-control {
+        justify-content: flex-end;
+        position: relative;
+
+        .slider-dots {
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+
+            .dot {
+                width: 15px;
+                height: 15px;
+                margin-right: $padding / 3;
+                border-radius: 5px;
+                background: $dotColor;
+                cursor: pointer;
+
+                &.active {
+                    background: $sliderColor;
+                }
+            }
+        }
+
+        .slider-arrows {
+            pointer-events: none;
+
+            .slider-arrow {
+                width: 50px;
+                height: 50px;
+                align-items: center;
+                justify-content: center;
+                background: $sliderColor;
+                cursor: pointer;
+                pointer-events: all;
+                z-index: 1;
+
+                &.slider-arrow-left {
+                    margin-right: $padding / 2;
+
+                    .icon-arrow {
+                        transform: rotate(180deg);
+                    }
+                }
+
+                &.inactive {
+                    opacity: 0.8;
+                    pointer-events: none;
+                }
+            }
+
+            .icon-arrow {
+                width: 20px;
+                height: 20px;
+            }
+        }
+    }
 }
 
 .cards-container {
     width: 100%;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: space-between;
+    transition: transform 0.3s;
 
     .card {
-        width: 100%;
-        margin: $padding 0;
+        min-width: calc((100% - #{$padding}) / 3);
+        margin-right: $padding / 2;
+        margin-bottom: $padding;
         flex-flow: column;
-        border-radius: $borderRadius;
-        box-shadow: $boxShadow;
-        overflow: hidden;
+        position: relative;
+
+        &:hover {
+            transform: scale(1.03);
+            transition: transform 0.3s;
+
+            :before {
+                content: '';
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                background: $cardColorBefore;
+                transform: translate(6px, 6px);
+                z-index: -1;
+            }
+        }
 
         @media #{$bp-md} {
             width: calc((100% - #{$padding * 2}) / 3);
