--- a/style.scss
+++ b/style.scss
@@ -2,8 +2,8 @@ $bp-md: "only screen and (min-width: 992px)";
 $black: #000000;
 $white: #ffffff;
 $cardColor: #eef1f6;
-$cardColorBefore: #d4d6df;
-$sliderColor: #1d1f48;
+$lightBlue: #d4d6df;
+$darkBlue: #1d1f48;
 $dotColor: #d8d8d8;
 $green: #0d8537;
 $headerSize: 70px;
@@ -12,11 +12,19 @@ $h1FontFamily: 'Zen Dots';
 $fontFamily: 'Ubuntu';
 $h1FontSize: 83px;
 $h1FontSizeMobile: 48px;
+$h1LineHeight: 83px;
+$h1LineHeightMobile: 48px;
+$h2FontSize: 50px;
+$h2FontSizeMobile: 40px;
+$h2LineHeight: 50px;
+$h2LineHeightMobile: 40px;
 $maxWidth: 1180px;
 $borderRadius: 5px;
 $boxShadow: 0 4px 15px rgba(43, 126, 179, 0.2);
 $spacerSm: 40px;
 $spacerMd: 80px;
+$fontSize: 16px;
+$buttonMinHeight: 50px;
 
 * {
     box-sizing: border-box;
@@ -37,10 +45,53 @@ h2 {
     border: 0;
 }
 
+body {
+    font-size: $fontSize;
+    line-height: 25px;
+}
+
+h2 {
+    font-family: $fontFamily;
+    font-size: $h2FontSizeMobile;
+    line-height: $h2LineHeightMobile;
+
+    @media #{$bp-md} {
+        font-size: $h2FontSize;
+        line-height: $h2LineHeight;
+    }
+}
+
 .page-wrapper {
+    padding-top: $headerSize;
     margin: 0 auto;
     flex-flow: column nowrap;
     overflow: hidden;
+}
+
+
+//---------------- Link -------------
+
+.link {
+    position: relative;
+    font-weight: 700;
+    text-decoration: none;
+    color: $black;
+    cursor: pointer;
+
+    &:after {
+        content: '';
+        width: 0;
+        height: 2px;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background: $darkBlue;
+        transition: width 0.3s ease-out;
+    }
+
+    &:hover:after {
+        width: 100%;
+    }
 }
 
 
@@ -53,6 +104,16 @@ h2 {
 
 
 //------------------- Header -----------------
+
+header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    box-shadow: $boxShadow;
+    background: $white;
+    z-index: 10;
+}
 
 .header-container {
     width: 100%;
@@ -94,16 +155,34 @@ h2 {
             display: none;
             cursor: pointer;
 
+            &.menu-button {
+                height: 100%;
+                padding: $padding;
+                align-items: center;
+                color: $white;
+                background: $darkBlue;
+            }
+
+            &:last-child {
+                margin-right: 0;
+            }
+
             @media #{$bp-md} {
-                padding: 0 $padding;
+                margin: 0 $padding;
                 display: flex;
             }
         }
 
         @media #{$bp-md} {
+            height: 100%;
             flex: 1 0 auto;
+            align-items: center;
             justify-content: flex-end;
         }
+    }
+
+    @media #{$bp-md} {
+        padding: 0;
     }
 }
 
@@ -115,11 +194,11 @@ h2 {
 
     .banner-wrapper {
         width: 100%;
-        height: 400px;
+        min-height: 400px;
         position: relative;
 
         @media #{$bp-md} {
-            height: 600px;
+            min-height: 600px;
         }
     }
 
@@ -139,6 +218,7 @@ h2 {
         h1 {
             font-family: $h1FontFamily;
             font-size: $h1FontSizeMobile;
+            line-height: $h1LineHeightMobile;
 
             &.number {
                 color: $black;
@@ -150,12 +230,11 @@ h2 {
 
             @media #{$bp-md} {
                 font-size: $h1FontSize;
+                line-height: $h1LineHeight;
             }
         }
 
         h2 {
-            font-family: $fontFamily;
-            font-size: 50px;
             font-weight: 700;
             color: $white;
         }
@@ -215,7 +294,7 @@ h2 {
                 cursor: pointer;
 
                 &.active {
-                    background: $sliderColor;
+                    background: $darkBlue;
                 }
             }
         }
@@ -228,7 +307,7 @@ h2 {
                 height: 50px;
                 align-items: center;
                 justify-content: center;
-                background: $sliderColor;
+                background: $darkBlue;
                 cursor: pointer;
                 pointer-events: all;
                 z-index: 1;
@@ -265,23 +344,27 @@ h2 {
         min-width: calc((100% - #{$padding}) / 3);
         margin-right: $padding / 2;
         margin-bottom: $padding;
-        flex-flow: column;
+        flex-flow: column nowrap;
         position: relative;
+
+        &:before {
+            content: '';
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: $lightBlue;
+            z-index: -1;
+            transition: transform 0.3s;
+        }
 
         &:hover {
             transform: scale(1.03);
             transition: transform 0.3s;
 
-            :before {
-                content: '';
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
-                background: $cardColorBefore;
+            &:before {
                 transform: translate(6px, 6px);
-                z-index: -1;
             }
         }
 
@@ -292,14 +375,144 @@ h2 {
 
     .card-image {
         width: 100%;
+        position: relative;
 
         img {
             width: 100%;
+        }
+
+        .logo-in-card {
+            width: auto;
+            height: 35px;
+            position: absolute;
+            right: $padding;
+            bottom: $padding;
         }
     }
 
     .card-body {
         padding: $padding;
+        flex-flow: column nowrap;
+        align-items: flex-start;
         background: $cardColor;
+
+        .card-title {
+            font-size: 30px;
+            line-height: 30px;
+        }
+
+        .link {
+            margin-top: auto;
+            font-size: 18px;
+        }
+
+        @media #{$bp-md} {
+            flex: 1 0 auto;
+        }
     }
+}
+
+
+//----------------- Form ------------------
+
+.banner-with-form {
+    margin-bottom: $buttonMinHeight / 2 + $padding;
+    position: relative;
+
+    .banner-wrapper {
+        flex-flow: column nowrap;
+        justify-content: flex-end;
+
+        .headings {
+            position: absolute;
+            top: 0;
+        }
+
+        @media #{$bp-md} {
+            min-height: 400px;
+        }
+    }
+}
+
+.form-container {
+    //develop
+    width: auto;
+    margin: 0 auto;
+}
+
+.form-container {
+    min-width: 500px;
+    max-height: $buttonMinHeight + $padding * 2;
+    padding: $padding;
+    flex-flow: column nowrap;
+    justify-content: flex-end;
+    border-radius: $borderRadius;
+    background: $cardColor;
+    overflow: hidden;
+    transform: translateY($buttonMinHeight / 2 + $padding);
+    z-index: 1;
+
+    .submit-form {
+        flex-flow: column nowrap;
+    }
+
+    .form-input {
+        padding-bottom: $padding / 2;
+        flex-flow: column;
+
+        .input {
+            width: 100%;
+            min-height: $buttonMinHeight;
+            padding: $padding / 2;
+            border: 2px solid $lightBlue;
+            border-radius: 0;
+            font-size: $fontSize;
+
+            &:hover,
+            &:active,
+            &:focus,
+            &:focus-visible {
+                border: 2px solid $darkBlue;
+                border-radius: 0;
+                outline: 0;
+            }
+        }
+
+        .radio-button {
+            flex-flow: row nowrap;
+            align-items: center;
+
+            input {
+                margin-right: $padding / 2;
+            }
+        }
+    }
+
+    .radio-label {
+        padding-bottom: $padding / 3;
+    }
+
+    .team-name-input {
+        display: none;
+    }
+
+    .submit-button {
+        width: 100%;
+        min-height: $buttonMinHeight;
+        padding: $padding / 2;
+        margin-top: $padding / 2;
+        justify-content: center;
+        color: $white;
+        background: $darkBlue;
+        cursor: pointer;
+    }
+}
+
+
+//---------------- Footer ------------------
+
+footer {
+    width: 100%;
+    min-height: $headerSize;
+    background: $lightBlue;
 }
