--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@ $lightBlue: #d4d6df;
 $darkBlue: #1d1f48;
 $dotColor: #d8d8d8;
 $green: #0d8537;
+$greenOpacity: rgba(13, 133, 55, 0.7);
 $headerSize: 70px;
 $padding: 30px;
 $h1FontFamily: 'Zen Dots';
@@ -181,6 +182,35 @@ header {
         }
     }
 
+    .dropdown-link {
+        height: 100%;
+        align-items: center;
+        position: relative;
+        font-weight: 700;
+
+        &:hover {
+            .dropdown-container {
+                display: flex;
+            }
+        }
+    }
+
+    .dropdown-container {
+        min-width: 200px;
+        padding-bottom: $padding;
+        display: none;
+        flex-flow: column nowrap;
+        align-items: flex-start;
+        position: absolute;
+        top: $headerSize;
+        left: $padding * -1;
+        background: $white;
+
+        .menu-item {
+            margin: $padding / 2 $padding;
+        }
+    }
+
     @media #{$bp-md} {
         padding: 0;
     }
@@ -196,6 +226,16 @@ header {
         width: 100%;
         min-height: 400px;
         position: relative;
+
+        &.page {
+            max-width: $maxWidth;
+            margin: 0 auto;
+
+            .image {
+                width: 100%;
+                left: 0;
+            }
+        }
 
         @media #{$bp-md} {
             min-height: 600px;
@@ -235,8 +275,17 @@ header {
         }
 
         h2 {
+            padding-bottom: $padding / 2;
             font-weight: 700;
             color: $white;
+
+            &.number {
+                color: $black;
+            }
+
+            &.versus {
+                color: $green;
+            }
         }
     }
 
@@ -263,6 +312,31 @@ header {
 
     &.cards {
         max-width: none;
+    }
+}
+
+
+// ------------------ USPS ----------------
+
+.usps {
+    width: 100%;
+    max-width: $maxWidth;
+    margin: 0 auto;
+    justify-content: flex-start;
+
+    .usp {
+        min-width: calc((100% - #{$padding}) / 3);
+        margin-right: $padding / 2;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50px;
+        box-shadow: $boxShadow;
+        background: $greenOpacity;
+    }
+
+    .usp-icon {
+        margin-right: $padding / 3;
     }
 }
 
@@ -413,6 +487,64 @@ header {
 }
 
 
+// ------------------ Pages -------------
+
+.info-wrapper {
+    max-width: $maxWidth;
+    margin: 0 auto;
+    flex-flow: column nowrap;
+    background: $white;
+
+    .row {
+        flex-flow: column nowrap;
+
+        .image {
+            img {
+                width: 100%;
+            }
+
+            @media #{$bp-md} {
+                width: 50%;
+            }
+        }
+
+        .info {
+            @media #{$bp-md} {
+                width: 50%;
+            }
+        }
+
+        .info:first-child {
+            .unordered-list {
+                padding-right: $padding;
+            }
+        }
+
+        .unordered-list {
+            list-style-type: none;
+
+            .list-item {
+                padding-bottom: $padding / 3;
+
+                .usp-icon {
+                    margin-right: $padding / 3;
+                }
+            }
+        }
+
+        @media #{$bp-md} {
+            flex-flow: row nowrap;
+        }
+    }
+
+    @media #{$bp-md} {
+        padding-top: $padding;
+        margin-top: -120px;
+        border-radius: 50px;
+    }
+}
+
+
 //----------------- Form ------------------
 
 .banner-with-form {
@@ -514,5 +646,15 @@ header {
 footer {
     width: 100%;
     min-height: $headerSize;
+    padding: $padding 0;
     background: $lightBlue;
+
+    .footer-container {
+        flex-flow: column nowrap;
+        align-items: center;
+
+        .menu-item {
+            margin: $padding $padding / 2;
+        }
+    }
 }
