--- a/style.scss
+++ b/style.scss
@@ -495,6 +495,15 @@ header {
     flex-flow: column nowrap;
     background: $white;
 
+    .versus-info {
+        flex-flow: column;
+    }
+
+    .title-wrapper {
+        padding-bottom: $padding;
+        justify-content: center;
+    }
+
     .row {
         flex-flow: column nowrap;
 
@@ -520,7 +529,13 @@ header {
             }
         }
 
+        .list-title {
+            padding-bottom: $padding;
+            padding-left: $padding;
+        }
+
         .unordered-list {
+            padding-left: $padding;
             list-style-type: none;
 
             .list-item {
