--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ body {
   line-height: 25px;
 }
 
+body.no-scroll {
+  overflow: hidden;
+}
+
 h2 {
   font-family: "Ubuntu";
   font-size: 40px;
@@ -39,6 +43,7 @@ h2 {
 }
 
 .page-wrapper {
+  width: calc(100% - 30px);
   padding-top: 70px;
   margin: 0 auto;
   -webkit-box-orient: vertical;
@@ -46,6 +51,12 @@ h2 {
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
   overflow: hidden;
+}
+
+@media only screen and (min-width: 992px) {
+  .page-wrapper {
+    width: 100%;
+  }
 }
 
 .link {
@@ -56,16 +67,18 @@ h2 {
   cursor: pointer;
 }
 
-.link:after {
-  content: '';
-  width: 0;
-  height: 2px;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background: #1d1f48;
-  -webkit-transition: width 0.3s ease-out;
-  transition: width 0.3s ease-out;
+@media only screen and (min-width: 992px) {
+  .link:after {
+    content: '';
+    width: 0;
+    height: 2px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: #1d1f48;
+    -webkit-transition: width 0.3s ease-out;
+    transition: width 0.3s ease-out;
+  }
 }
 
 .link:hover:after {
@@ -133,19 +146,58 @@ header {
   max-height: 40px;
 }
 
-.header-container .nav-menu .menu-item {
+.header-container .nav-menu {
+  width: 100vw;
+  height: 100vh;
+  padding-top: 70px;
   display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #ffffff;
+  overflow: auto;
+}
+
+.header-container .nav-menu .close-menu {
+  padding-right: 30px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  font-size: 25px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 992px) {
+  .header-container .nav-menu .close-menu {
+    display: none;
+  }
+}
+
+.header-container .nav-menu .menu-item {
+  padding: 15px;
   cursor: pointer;
 }
 
 .header-container .nav-menu .menu-item.menu-button {
-  height: 100%;
   padding: 30px;
+  margin-top: auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   color: #ffffff;
   background: #1d1f48;
+}
+
+@media only screen and (min-width: 992px) {
+  .header-container .nav-menu .menu-item.menu-button {
+    height: 100%;
+    margin-top: 0;
+  }
 }
 
 .header-container .nav-menu .menu-item:last-child {
@@ -154,6 +206,7 @@ header {
 
 @media only screen and (min-width: 992px) {
   .header-container .nav-menu .menu-item {
+    padding: 0;
     margin: 0 30px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -163,24 +216,35 @@ header {
 
 @media only screen and (min-width: 992px) {
   .header-container .nav-menu {
+    width: auto;
     height: 100%;
+    padding-top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-flex: 1;
         -ms-flex: 1 0 auto;
             flex: 1 0 auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
+    position: static;
+    overflow: visible;
   }
 }
 
 .header-container .dropdown-link {
-  height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
   position: relative;
   font-weight: 700;
 }
@@ -191,10 +255,22 @@ header {
   display: flex;
 }
 
+@media only screen and (min-width: 992px) {
+  .header-container .dropdown-link {
+    height: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .header-container .dropdown-container {
   min-width: 200px;
   padding-bottom: 30px;
-  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
@@ -202,14 +278,26 @@ header {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  position: absolute;
-  top: 70px;
-  left: -30px;
   background: #ffffff;
 }
 
-.header-container .dropdown-container .menu-item {
-  margin: 15px 30px;
+.header-container .dropdown-container .menu-item:first-child {
+  padding-top: 30px;
+}
+
+@media only screen and (min-width: 992px) {
+  .header-container .dropdown-container .menu-item {
+    margin: 15px 30px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .header-container .dropdown-container {
+    display: none;
+    position: absolute;
+    top: 70px;
+    left: -30px;
+  }
 }
 
 @media only screen and (min-width: 992px) {
@@ -368,6 +456,7 @@ header {
 }
 
 .cards-wrapper {
+  width: 100%;
   max-width: 1180px;
   margin: 0 auto;
   -webkit-box-orient: vertical;
@@ -386,6 +475,7 @@ header {
 .cards-wrapper .slider-control .slider-dots {
   width: 100%;
   height: 100%;
+  display: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -462,7 +552,7 @@ header {
 }
 
 .cards-container .card {
-  min-width: calc((100% - 30px) / 3);
+  min-width: 100%;
   margin-right: 15px;
   margin-bottom: 30px;
   -webkit-box-orient: vertical;
@@ -472,28 +562,21 @@ header {
   position: relative;
 }
 
-.cards-container .card:before {
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: #d4d6df;
-  z-index: -1;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
-}
-
-.cards-container .card:hover {
-  -webkit-transform: scale(1.03);
-          transform: scale(1.03);
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
+@media only screen and (min-width: 992px) {
+  .cards-container .card:before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #d4d6df;
+    z-index: -1;
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s;
+  }
 }
 
 .cards-container .card:hover:before {
@@ -502,8 +585,19 @@ header {
 }
 
 @media only screen and (min-width: 992px) {
+  .cards-container .card:hover {
+    -webkit-transform: scale(1.03);
+            transform: scale(1.03);
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .cards-container .card {
-    width: calc((100% - 60px) / 3);
+    min-width: calc((100% - 30px) / 3);
   }
 }
 
@@ -532,6 +626,9 @@ header {
 
 .cards-container .card-body {
   padding: 30px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
@@ -550,14 +647,6 @@ header {
 .cards-container .card-body .link {
   margin-top: auto;
   font-size: 18px;
-}
-
-@media only screen and (min-width: 992px) {
-  .cards-container .card-body {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0 auto;
-            flex: 1 0 auto;
-  }
 }
 
 .info-wrapper {
