--- a/style.scss
+++ b/style.scss
@@ -378,17 +378,28 @@ header {
     width: 100%;
     max-width: $maxWidth;
     margin: 0 auto;
+    flex-flow: row wrap;
     justify-content: flex-start;
 
     .usp {
         min-width: calc((100% - #{$padding}) / 3);
+        padding: $padding / 2;
         margin-right: $padding / 2;
+        margin-bottom: $padding / 2;
         flex-flow: row nowrap;
         align-items: center;
         justify-content: center;
         border-radius: 50px;
         box-shadow: $boxShadow;
         background: $greenOpacity;
+
+        h3 {
+            margin: 0;
+        }
+
+        &:last-child {
+            margin-right: 0;
+        }
     }
 
     .usp-icon {
@@ -736,11 +747,34 @@ footer {
     background: $lightBlue;
 
     .footer-container {
+        width: 100%;
         flex-flow: column nowrap;
         align-items: center;
 
+        img {
+            max-width: 100%;
+            margin-bottom: $padding / 2;
+
+            @media #{$bp-md} {
+                margin-bottom: 0;
+            }
+        }
+
+        .footer-menu-items {
+            max-width: 100%;
+            flex-flow: column;
+
+            @media #{$bp-md} {
+                flex-flow: row;
+            }
+        }
+
         .menu-item {
-            margin: $padding $padding / 2;
+            margin: $padding / 2;
+
+            @media #{$bp-md} {
+                margin: $padding $padding / 2;
+            }
         }
     }
 }
