--- a/style.css
+++ b/style.css
@@ -120,13 +120,31 @@ header {
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
   cursor: pointer;
+  z-index: 1;
 }
 
 .header-container .menu-icon .menu-line {
   width: 100%;
   height: 4px;
-  margin: 4px 0;
+  margin: 3px 0;
   background: #000000;
+  -webkit-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.header-container .menu-icon.clicked .one {
+  -webkit-transform: translateY(4px) rotate(135deg);
+          transform: translateY(4px) rotate(135deg);
+}
+
+.header-container .menu-icon.clicked .two {
+  -webkit-transform: translate(100vw);
+          transform: translate(100vw);
+}
+
+.header-container .menu-icon.clicked .three {
+  -webkit-transform: translateY(-16px) rotate(-135deg);
+          transform: translateY(-16px) rotate(-135deg);
 }
 
 @media only screen and (min-width: 992px) {
@@ -140,6 +158,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  z-index: 1;
 }
 
 .header-container .logo img {
@@ -155,6 +174,9 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   position: fixed;
   top: 0;
   left: 0;
@@ -163,6 +185,7 @@ header {
 }
 
 .header-container .nav-menu .close-menu {
+  width: 100%;
   padding-right: 30px;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -184,19 +207,20 @@ header {
 }
 
 .header-container .nav-menu .menu-item.menu-button {
+  width: 100%;
   padding: 30px;
-  margin-top: auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
   color: #ffffff;
   background: #1d1f48;
 }
 
 @media only screen and (min-width: 992px) {
   .header-container .nav-menu .menu-item.menu-button {
+    width: auto;
     height: 100%;
-    margin-top: 0;
   }
 }
 
@@ -331,6 +355,7 @@ header {
 .banner .headings {
   width: 100%;
   height: 100%;
+  padding: 15px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
@@ -702,10 +727,6 @@ header {
           flex-flow: column;
 }
 
-.info-wrapper .row .info h3 {
-  padding: 0 30px;
-}
-
 @media only screen and (min-width: 992px) {
   .info-wrapper .row .info {
     width: 50%;
@@ -717,13 +738,23 @@ header {
 }
 
 .info-wrapper .row .list-title,
-.info-wrapper .row .intro {
-  padding-bottom: 30px;
-  padding-left: 30px;
+.info-wrapper .row .intro,
+.info-wrapper .row h3 {
+  padding: 15px;
+  margin: 0;
+}
+
+@media only screen and (min-width: 992px) {
+  .info-wrapper .row .list-title,
+  .info-wrapper .row .intro,
+  .info-wrapper .row h3 {
+    padding: 30px;
+  }
 }
 
 .info-wrapper .row .unordered-list {
-  padding-left: 30px;
+  padding: 15px;
+  margin: 0;
   list-style-type: none;
 }
 
@@ -733,6 +764,12 @@ header {
 
 .info-wrapper .row .unordered-list .list-item .usp-icon {
   margin-right: 10px;
+}
+
+@media only screen and (min-width: 992px) {
+  .info-wrapper .row .unordered-list {
+    padding: 30px;
+  }
 }
 
 @media only screen and (min-width: 992px) {
@@ -784,7 +821,6 @@ header {
 }
 
 .form-container {
-  min-width: 500px;
   max-height: 110px;
   padding: 30px;
   -webkit-box-orient: vertical;
@@ -867,6 +903,12 @@ header {
   cursor: pointer;
 }
 
+@media only screen and (min-width: 992px) {
+  .form-container {
+    min-width: 500px;
+  }
+}
+
 footer {
   width: 100%;
   min-height: 70px;
@@ -887,6 +929,7 @@ footer .footer-container {
 
 footer .footer-container img {
   max-width: 100%;
+  padding: 15px;
   margin-bottom: 15px;
 }
 
@@ -902,6 +945,9 @@ footer .footer-container .footer-menu-items {
   -webkit-box-direction: normal;
       -ms-flex-flow: column;
           flex-flow: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media only screen and (min-width: 992px) {
