--- a/style.scss
+++ b/style.scss
@@ -529,13 +529,15 @@ header {
         }
 
         .slider-arrows {
+            width: 100%;
             pointer-events: none;
 
             .slider-arrow {
-                width: 50px;
+                width: 100%;
                 height: 50px;
                 align-items: center;
                 justify-content: center;
+                border-radius: 0 50px;
                 background: $darkBlue;
                 cursor: pointer;
                 pointer-events: all;
@@ -543,6 +545,7 @@ header {
 
                 &.slider-arrow-left {
                     margin-right: $padding / 2;
+                    border-radius: 50px 0;
 
                     .icon-arrow {
                         transform: rotate(180deg);
@@ -553,11 +556,19 @@ header {
                     opacity: 0.8;
                     pointer-events: none;
                 }
+
+                @media #{$bp-md} {
+                    width: 75px;
+                }
             }
 
             .icon-arrow {
                 width: 20px;
                 height: 20px;
+            }
+
+            @media #{$bp-md} {
+                width: auto;
             }
         }
     }
