--- a/style.css
+++ b/style.css
@@ -1046,6 +1046,47 @@ header {
   }
 }
 
+.location-thb {
+  width: 100%;
+  max-width: 1180px;
+  margin: 0 auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-flow: column-reverse nowrap;
+          flex-flow: column-reverse nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.location-thb .location-info {
+  padding-bottom: 15px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+}
+
+.location-thb .location-info h3,
+.location-thb .location-info p {
+  margin: 0;
+}
+
+@media only screen and (min-width: 992px) {
+  .location-thb .location-info {
+    padding: 30px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .location-thb {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row;
+            flex-flow: row;
+  }
+}
+
 footer {
   width: 100%;
   min-height: 70px;
