--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ header {
   background-size: contain;
   -webkit-transform: translateY(200%);
           transform: translateY(200%);
+  z-index: -1;
   -webkit-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
 }
